fix overflow in contact

--- a/_sass/pages/contact.scss
+++ b/_sass/pages/contact.scss
@@ -1,3 +1,7 @@
+body.contact{
+  overflow: hidden;
+}
+
 .contact-map__container {
   padding: 2em 0.5em;
   overflow: hidden;
